# research-note

./: .gitignore  README.md  blogs.md  codes.md  cv.tex  links.md  pyproject.toml  run-claude-code.sh
ai-agent/: frameworks.md
ai-agent-security/: README.md  agent-gateway-architecture.md  agent-oauth.md  agent-security-landscape.md  agentic-network.md  enterprise-agent-platforms.md  threat-modeling.md
ai-agent-security/articles/: claude-code-security.md  owasp-top10-agentic-applications.md
ai-agent-security/common-threats/: owasp-top10-agentic-applications.md
dev/: README.md  claude.md  development-methodology.md  git.md  markdown.md  mermaid.md  python.md  tmux.md  uv.md
llm-ai-agent/: README.md  agent-components.md  agent-harness.md  agent-landscape.md  claude-code-folder-reference-kor.md  claude-code-folder-reference.md  frameworks.md  langgraph-example.ipynb  llm-test.ipynb  overview.md  terms.md
llm-ai-agent/articles/: context-rot.md
security/: README.md  access_control.md  basic-security.md  basic_security.md  oauth.md  reference-details.md  terms.md  threat-modeling.md  threat_modeling.md
security/diagrams/: threat-modeling-relationships.mmd
security/threat-modeling/: README.md  tools-and-frameworks.md  tools.md
security/threat-modeling/common-threats/: README.md  owasp-top10.md
