[project]
name = "research-note"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.109.2",
    "fastapi>=0.137.1",
    "ipykernel>=7.3.0",
    "langchain-anthropic>=1.4.6",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.5",
    "langgraph-prebuilt>=1.1.0",
    "langserve>=0.3.3",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
]
